# exercises

./: CMakeLists.txt  README.md
01-hello-world/: Makefile  README.md  main.c
02-timers/: Makefile  README.md  main.c
03-shell/: Makefile  README.md  main.c
04-coap/: Makefile  client.c  server.c
04-saul/: Makefile  README.md  main.c
05-gpios/: Makefile  README.md  main.c
05-threads-and-events/: README.md  main.c
06-threads/: Makefile  README.md  main.c
06-threads-and-events/: main.c
07-events/: README.md  main.c
08-coap-basic/: Makefile  README.md  client.c  main.c  server.c
08-coap-basic/.app/: Makefile  README.md  gcoap_example.h  main.c  server.c
09-lorawan-basic/: Makefile  README.md  main.c
10-lorawan-sensor/: Makefile  README.md  main.c  mqtt.py
